<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.ccnx.android.apps.ui.Plan">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">
       	
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trainingName"
            android:id="@+id/textView43" />

        <EditText
            android:id="@+id/trainingName"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:ems="10"
            android:height="200dp"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/trainingText"
            android:id="@+id/textView3" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:ems="10"
            android:height="200dp"
            android:inputType="textMultiLine" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/training_rate"
            android:id="@+id/textView4"
            android:layout_gravity="center|left" />
        
        <RatingBar
            android:id="@+id/selfRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="6"
            android:stepSize="0.5"
            android:rating="1" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_send"
                android:id="@+id/btnWyslijPlan"
                android:width="100dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:layout_marginBottom="82dp" />

            <Button
                android:id="@+id/btnResetPlan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:text="@string/btn_reset"
                android:width="100dp"
                android:layout_marginBottom="82dp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>
